fix navbar collapse

--- a/MonashApp/Content/LayoutStyle.css
+++ b/MonashApp/Content/LayoutStyle.css
@@ -63,7 +63,6 @@ ul.searchbar {
 }
 
 .navbar ul{
-    display: inline-flex;
     list-style: none;
 }
 
@@ -72,6 +71,8 @@ ul.searchbar {
     padding-right: 0;
     margin-left: 0;
     margin-right: 0;
+
+    background: white;
 }
 
 .navbar .fa {
